<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">小九九</string>
    <string name="action_settings">设置</string>
    <string name="ecard_detail_see_more">查看更多</string>
    <string name="user_login_username">请输入邮箱</string>
    <string name="user_login_password">请输入密码</string>
    <string name="user_login_password_again">请输入密码</string>
    <string name="user_login">登录</string>
    <string name="user_login_remberpass">记住密码</string>
    <string name="user_login_registnow">立即注册></string>
    <string name="user_login_regist">注册</string>
    <string name="user_login_alreadyhave">已经有帐号了？</string>
    <string name="menu_share">分享</string>

    <!-- ERROR -->
    <string name="network_error">网络异常</string>
    <string name="code001"></string>
    <string name="code0">没有内容了</string>

</resources>