<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/pitch16" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/register_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_edit_user"
            android:ems="10"
            android:hint="@string/user_login_username"
            android:inputType="textPersonName" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/register_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_edit_pass"
            android:ems="10"
            android:hint="@string/user_login_password"
            android:inputType="textPassword" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical" >

        <EditText
            android:id="@+id/register_againPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_edit_pass"
            android:ems="10"
            android:hint="@string/user_login_password_again"
            android:inputType="textPassword" />
    </RelativeLayout>

    <Button
        android:id="@+id/register_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/pitch16"
        android:layout_marginTop="@dimen/pitch16"
        android:background="@drawable/login_button"
        android:text="@string/user_login_regist"
        android:textColor="@color/white"
        android:textSize="@dimen/textsize16" />

    <TextView
        android:id="@+id/register_toLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/user_login_alreadyhave"
        android:textSize="@dimen/textsize16" />

</LinearLayout>