<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/pitch16" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/login_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_edit_user"
            android:ems="10"
            android:hint="@string/user_login_username" >
        </EditText>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:background="@drawable/login_edit_pass"
            android:ems="10"
            android:hint="@string/user_login_password"
            android:inputType="textPassword" />

        <ImageView
            android:id="@+id/login_findPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/pitch8"
            android:background="@drawable/login_forget_password" />
    </RelativeLayout>

    <Button
        android:id="@+id/login_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/pitch12"
        android:layout_marginTop="@dimen/pitch12"
        android:background="@drawable/login_button"
        android:text="@string/user_login"
        android:textColor="@color/white"
        android:textSize="@dimen/textsize16" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical" >

        <CheckBox
            android:id="@+id/login_remeberPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:button="@drawable/login_checkbox_selector"
            android:maxHeight="10dp"
            android:paddingLeft="10dp"
            android:text="@string/user_login_remberpass"
            android:textColor="#333333"
            android:textSize="@dimen/textsize12" >
        </CheckBox>

        <TextView
            android:id="@+id/login_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="@dimen/pitch8"
            android:text="@string/user_login_regrightnow"
            android:textColor="@color/blue"
            android:textSize="@dimen/textsize16" />
    </RelativeLayout>

</LinearLayout>